@@ -1,0 +1,11 @@
+﻿namespace AjLanguage.Language
+{
+    using System;
+    using System.Collections.Generic;
+    using System.Linq;
+    using System.Text;
+
+    public interface ILocalCallable
+    {
+    }
+}
